# ambitbudget

./: .gitignore  coming-soon.html  faq.html  features.html  index-full.html  index.html  plus.html  privacy.html  pro.html  robots.txt  sitemap.xml  starter.html  terms.html  vercel.json
.github/workflows/: build-tauri.yml
.well-known/: assetlinks.json
api/: check.js  validate.js  version.js
app/: index.html  manifest.json  sw.js
ask/: how-to-start-budgeting.html  index.html  track-bills-without-missing-payment.html  why-data-should-stay-on-device.html
dl/: ambit-budget-pro.html
kids/: index.html
kids-demo/: app.html  dash.html  index.html  manifest.json  sw-kids.js  tracker.html
src-tauri/: Cargo.toml  PLAY_STORE_IDENTITY.md  SIGNING.md  STORE_IDENTITY.md  sign.ps1  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
