[package]
name = "ambit-budget-pro"
version = "1.0.1"
description = "Ambit Budget Pro - Navigate your finance$"
authors = ["Kifolloy AIR, LLC"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
